# NAT-TestFirmware

./: .gitignore  CMakeLists.txt  Kconfig  README.md  package-lock.json  package.json  prj.conf  west.yml
.github/workflows/: build-and-release.yaml  pr-check_compliance.yaml
adr/: 001-stationary-during-tests.md
src/: main.c  nat_cmd.c  nat_test.c  nat_test.h
